infra/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-users-service
spec:
  selector:
    app: ms-users
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
